# bytardag

./: .env-example  .flake8  .gitignore  README.rst  config.py  docker-compose.production.yml  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml
migrations/versions/: 082b2521b4ff_basic_user_model.py
nginx/sites-enabled/: flask_app
postgres/: Dockerfile
src/bytardag/: __init__.py  models.py
src/bytardag/auth/: __init__.py  forms.py  routes.py
src/bytardag/main/: __init__.py  routes.py
src/bytardag/templates/: base.html
tests/: conftest.py  test_basics.py  test_login.py
web/: Dockerfile  config.py  manage.py  requirements.txt  setup.cfg  wsgi.py
web/app/: __init__.py  decorators.py  email.py  logging.py  models.py
web/app/auth/: forms.py  views.py
web/app/email/: __init__.py  tasks.py  views.py
web/app/main/: errors.py  forms.py  views.py
web/app/templates/: 403.html  404.html  500.html  base.html  gdpr.html  macros.html
web/docs/: Makefile
web/docs/source/: conf.py  index.rst
web/migrations/versions/: 0c0c2110ae8b_added_bank_account_details.py  1c3642736709_removed_email_and_emailevent_from_model.py  76f2b3e733ab_basic_model.py  8ce5e5684e57_added_attributes_to_user.py  acd29f303bfb_added_field_for_gdpr_status.py  bc1d6194ff58_added_attribute_for_generating_seller_.py  f5dfc7172ff5_working_association_object.py
web/tests/: conftest.py  test_auth.py  test_basics.py  test_email.py  test_model.py  test_registration.py  test_registration_and_signup.py  test_seller_id.py  test_signup.py  test_user_model.py
(+33 files in other folders)
