[tool.poetry]
name = "bytardag"
version = "0.1.0"
description = ""
authors = ["Linus Törngren <linus@etnolit.se>"]

[tool.coverage.paths]
source = ["src/bytardag", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["bytardag"]

[tool.coverage.report]
show_missing = true

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
click = "^8.0.1"
python-dotenv = "^0.17.1"
flask-sqlalchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
email-validator = "^1.1.2"
Flask-Migrate = "^3.0.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
darglint = "^1.8.0"
mypy = "^0.812"
black = "^21.5b2"
safety = "^1.10.3"
pytest-cov = "^2.12.0"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
